--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>Valay</title><link href="/static/css/main.540f23ca.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.aaaf90a0.js"></script></body></html>
+<!DOCTYPE html><html lang="en">
+    <head>
+    <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <meta name="theme-color" content="#000000"><link rel="manifest" href="/public/manifest.json">
+    <link rel="shortcut icon" href="/public/favicon.ico"><title>Valay</title><link href="/public/static/css/main.540f23ca.css" rel="stylesheet">
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
+        <script type="text/javascript" src="/public/static/js/main.aaaf90a0.js"></script>
+
+</body></html>
